--- a/style.css
+++ b/style.css
@@ -5,11 +5,19 @@ body{
     margin: 0 45px;
     font-family: 'Roboto', sans-serif;
 }
+.header{
+    padding: 25px 250px;
+}
 .black {
     background-color: #1F2937;
 }
 .logo{
-    font-size: 24px;
+    width: 200px;
+    height: auto;
+    border-radius: 20px;
+}
+.right{
+    margin-left: auto;
 }
 ul{
     display: flex;
@@ -24,30 +32,57 @@ li{
     font-size: 18px;
 }
 
-.right{
-    margin-left: auto;
-}
+
 a{
     list-style: none;
     text-decoration: none;
     color: #E5E7EB;
 }
-.h2{
-    font-size: 48px;
-}
-img{
-    height: auto;
-    width: 200px;
-}
-.header{
-    padding: 25px 250px;
-}
+
 .central{
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 380px;
     color: #F9FAF8;
-    padding: 25px 250px;
+    padding: 35px 250px;
     flex-wrap: wrap;
 }
+.centralLeft{
+    width: 45%;
+}
+h2{
+    font-size: 48px;
+}
+h3{
+    /* color: #1F2937; */
+    font-size: 36px;
+    font-weight: bolder;
+}
+h4{
+    font-size: xx-large;
+}
+.imgCentral{
+    height: auto;
+    width: 600px;
+    padding: auto;
+    /* margin-left: auto; */
+}
+.buttonCentral{
+    background-color: #3882F6;
+    border-radius: 12px;
+    border-color: #3882F6;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+.buttonCentral:hover {
+    padding-right: 25px;
+    background-color: rgb(30, 63, 211);
+  }
 .quote{
     padding: 25px 250px;
     background-color: #E5E7EB;
@@ -55,46 +90,67 @@ img{
 .mainpara{
     font-size: 36PX;
     font-style: italic;
-    padding: 0 145px;
+    padding: 0 120px;
 }
 .littlepara{
     text-align: end;
-    font-weight: bold;
-    padding: 0 235px;
+    font-weight:lighter;
+    padding: 0 120px;
 }
+.info{
+    display: flex;
+    flex-direction: column;
+    padding: 0px 250px;
+    background-color: white;
+    text-align: center;
+    /* justify-content: center; */
+}
+.cards{
+    display: flex;
+    justify-content: space-evenly;
+}
+.infoImg{
+    border: solid #3882F6 5px;
+    border-radius: 20px;
+    height: 150px;
+    width: 230px;
+}
+
 .action{
     color: white;
-    padding: 25px 250px;
+    padding: 20px 250px;
     background-color: white;
 }
 .bluesquare{
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    justify-content: center;
-    align-content: space-between;
-    height: 110px;
-    padding: 20px;
+    justify-content:center;
+    align-content: space-around;
+    height: 120px;
+    padding: 0 20px;
     background-color: #3882F6;
     border-radius: 15px;
-    padding: 0 125px;
+}
+.actionLeft{
+    margin-top: -40px ;
 }
 .button{
-        background-color: #3882F6;
-        border-radius: 12px;
-        border: solid 2px white;
-        color: white;
-        padding: 15px 32px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 16px;
-    }
-
-.actionLeft{
-    display: flexbox;
-    flex: 1 1 80px;
+    background-color: #3882F6;
+    border-radius: 12px;
+    border: solid 2px white;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
 }
+.button:hover {
+    padding-right: 25px;
+    background-color: rgb(30, 63, 211);
+  }
+
 
 .footer{
     color: white;
